# reward-hacking-detector

./: .gitignore  CLAUDE.md  Dockerfile  README.md  agents.md  docker-compose.yml  pyproject.toml  requirements.txt  reward_hacking_project_spec.md  test.py
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dashboard/: streamlit_app.py
docs/: METHODOLOGY.md
notebooks/: analysis.ipynb
src/: __init__.py  cli.py  config.py  logging_config.py  storage.py
src/agents/: __init__.py  dqn.py  optimal.py  q_learning.py
src/api/: __init__.py  app.py
src/detection/: __init__.py  metrics.py  policy_divergence.py  trajectory_analyzer.py
src/environment/: __init__.py  configs.py  gridworld.py  renderer.py
src/experiments/: __init__.py  evaluate.py  sweep.py  train.py
tests/: test_agents.py  test_api.py  test_detection.py  test_environment.py
